# alert_bot

./: .gitignore  CLAUDE.md  README.md  backtest.py  backtest_realdata.py  backtest_trump.py  backtest_vectorbt.py  crash_monitor.py  data_loader.py  data_loader_futures.py  initial.py  initial_11.py  main.py  multi_crash_monitor.py  pyproject.toml  setup_cron.sh  test_backtest.py  test_multi_monitor.py
